--- a/templates/admin/form/theme.html.twig
+++ b/templates/admin/form/theme.html.twig
@@ -12,7 +12,7 @@
                     <hl-code class="language-twig">{{ source('admin/form/theme/single_form_bs.txt') }}</hl-code>
 
                     <h5>Example :</h5>
-                    <div class="border p-2 bg-light">
+                    <div class="p-2 bg-light">
                         {{ umbrella_form_theme(form.default, 'default') }}
                         {{ form_rest(form.default) }}
                     </div>
@@ -23,7 +23,7 @@
                     <hl-code class="language-twig">{{ source('admin/form/theme/single_form_bs_horizontal.txt') }}</hl-code>
 
                     <h5>Example :</h5>
-                    <div class="border p-2 bg-light">
+                    <div class="bg-light p-2">
                         {{ umbrella_form_theme(form.horizontal, 'horizontal') }}
                         {{ form_rest(form.horizontal) }}
                     </div>
