--- a/templates/admin/notification/index.html.twig
+++ b/templates/admin/notification/index.html.twig
@@ -9,7 +9,7 @@
                 </div>
                 <div class="card-body">
                     <p>Generate entity and provider :</p>
-                    <hl-code class="language-none">php bin/console make:admin:notification</hl-code>
+                    <hl-code class="language-bash">php bin/console make:admin:notification</hl-code>
 
                     <p>Customize generated code as you want, then enable notification on config:</p>
                     <hl-code class="language-yaml">{{ source('admin/notification/_config.txt') }}</hl-code>
