--- a/templates/bundles/UmbrellaAdminBundle/_scripts.html.twig
+++ b/templates/bundles/UmbrellaAdminBundle/_scripts.html.twig
@@ -1,2 +1,2 @@
 {% include "@!UmbrellaAdmin/_scripts.html.twig" %}
-{{ encore_entry_script_tags('admin') }}
+{{ encore_entry_script_tags('admin_highlight_code') }}
