--- a/templates/admin/form/select/_autocomplete_options.html.twig
+++ b/templates/admin/form/select/_autocomplete_options.html.twig
@@ -1,5 +1,7 @@
-<h4>Options </h4>
-<div>
+<a data-bs-toggle="collapse" data-bs-target="#autocomplete-options" class="card-link">
+    <h4 class="dropdown-toggle">Form options</h4>
+</a>
+<div class="collapse" id="autocomplete-options">
     <table class="table">
         <thead>
         <tr>
