--- a/templates/admin/form/select/_entity_options.html.twig
+++ b/templates/admin/form/select/_entity_options.html.twig
@@ -1,5 +1,7 @@
-<h4>Options </h4>
-<div>
+<a data-bs-toggle="collapse" data-bs-target="#entity-options" class="card-link">
+    <h4 class="dropdown-toggle">Form options</h4>
+</a>
+<div class="collapse" id="entity-options">
     All options of <a href="https://symfony.com/doc/current/reference/forms/types/entity.html">EntityType</a> + all options of
     <b>UmbrellaChoiceType</b>
 </div>
