--- a/templates/bundles/UmbrellaAdminBundle/_stylesheets.html.twig
+++ b/templates/bundles/UmbrellaAdminBundle/_stylesheets.html.twig
@@ -1,2 +1,2 @@
 {% include "@!UmbrellaAdmin/_stylesheets.html.twig" %}
-{{ encore_entry_link_tags('admin_highlight_code') }}
+{{ encore_entry_link_tags('admin') }}
