--- a/templates/admin/datatable/multiple.html.twig
+++ b/templates/admin/datatable/multiple.html.twig
@@ -6,7 +6,7 @@
     </div>
     {% for mission_status, table in tables %}
         <div class="card">
-            <a href="#card-{{ table.id }}" class="card-header text-reset" data-bs-toggle="collapse">
+            <a href="#card-{{ table.id }}" class="card-link card-header" data-bs-toggle="collapse">
                 <h4 class="card-title"><i class="mdi mdi-chevron-right"></i> Space missions filtered by <span class="text-primary">{{ mission_status }}</span></h4>
             </a>
             <div id="card-{{ table.id }}" class="card-body collapse">
