Add doc for Js response component

--- a/templates/admin/js/index.html.twig
+++ b/templates/admin/js/index.html.twig
@@ -42,8 +42,12 @@
                         This attribute will override the default behaviour of <b>link</b> or <b>form</b> and send an <b>Ajax</b> request to server on
                         <b>click</b> or on <b>submit</b>.<br>
                     </p>
-                    <hl-code class="language-xml">{{ source('admin/js/_async_link.txt') | e('html') }}</hl-code>
 
+                    <h5>On view : </h5>
+                    <hl-code class="language-twig">{{ source('admin/js/_async_link.txt') | e('html') }}</hl-code>
+
+                    <h5>On controller : </h5>
+                    <hl-code class="language-php">{{ source('admin/js/_async_controller.txt') | e('html') }}</hl-code>
                     <div>
                         {% for action, label in actions %}
                             <a href data-xhr="{{ path('app_admin_js_xhr', {'action' : action}) }}" class="btn btn-primary me-2 mb-2">
