--- a/templates/admin/datatable/multiple.html.twig
+++ b/templates/admin/datatable/multiple.html.twig
@@ -9,7 +9,7 @@
             <a href="#card-{{ table.id }}" class="card-link card-header" data-bs-toggle="collapse">
                 <h4 class="card-title"><i class="mdi mdi-chevron-right"></i> Space missions filtered by <span class="text-primary">{{ mission_status }}</span></h4>
             </a>
-            <div id="card-{{ table.id }}" class="card-body collapse">
+            <div id="card-{{ table.id }}" class="card-datatable collapse">
                 {{ render_table(table) }}
             </div>
         </div>
