--- a/templates/admin/datatable/basic.html.twig
+++ b/templates/admin/datatable/basic.html.twig
@@ -1,13 +1,16 @@
 {% extends "@UmbrellaAdmin/layout.html.twig" %}
 
 {% block content %}
-    <div class="card card-body">
-        <h4 class="card-title">Basic example</h4>
-        <p class="text-muted font-14">
-            Async loading. Data are paginate, filtered and ordered by server using <code>EntityAdapter</code>.<br>
-            Table is built / configured using <code>DataTableType</code> that define columns using <code>ColumnType</code> and toolbar using Symfony <code>FormType</code> and <code>WidgetType</code>.<br>
-        </p>
-
-        {{ render_table(table) }}
+    <div class="card">
+        <div class="card-body pb-0">
+            <h4 class="card-title">Basic example</h4>
+            <p class="text-muted font-14">
+                Async loading. Data are paginate, filtered and ordered by server using <code>EntityAdapter</code>.<br>
+                Table is built / configured using <code>DataTableType</code> that define columns using <code>ColumnType</code> and toolbar using Symfony <code>FormType</code> and <code>WidgetType</code>.<br>
+            </p>
+        </div>
+        <div class="card-datatable">
+            {{ render_table(table) }}
+        </div>
     </div>
 {% endblock %}
