--- a/templates/admin/datatable/draggable.html.twig
+++ b/templates/admin/datatable/draggable.html.twig
@@ -1,13 +1,16 @@
 {% extends "@UmbrellaAdmin/layout.html.twig" %}
 
 {% block content %}
-    <div class="card card-body">
-        <h4 class="card-title">Draggable example</h4>
-        <p class="text-muted font-14">
-            Example of Datatable with <a href="https://datatables.net/extensions/rowreorder/" class="text-primary">RowReorder</a> extension.<br>
-            After each row reordering, an ajax query was performed and server save changes.
-        </p>
-
-        {{ render_table(table) }}
+    <div class="card">
+        <div class="card-body pb-0">
+            <h4 class="card-title">Draggable example</h4>
+            <p class="text-muted font-14">
+                Example of Datatable with <a href="https://datatables.net/extensions/rowreorder/" class="text-primary">RowReorder</a> extension.<br>
+                After each row reordering, an ajax query was performed and server save changes.
+            </p>
+        </div>
+        <div class="card-datatable">
+            {{ render_table(table) }}
+        </div>
     </div>
 {% endblock %}
