--- a/templates/admin/datatable/editable.html.twig
+++ b/templates/admin/datatable/editable.html.twig
@@ -1,14 +1,17 @@
 {% extends "@UmbrellaAdmin/layout.html.twig" %}
 
 {% block content %}
-    <div class="card card-body">
-        <h4 class="card-title">Editable / Exportable example</h4>
-        <p class="text-muted font-14">
-            There is no limitation about how you edit your data in datatable.<br>
-            You just have to add <code>WidgetColumnType</code> on your <code>DataTableType</code> and define link depending on data in row (You can create your own column too or customize the render of your columns).<br>
-            If you want edit data with modal, you can use <code>JsResponse</code> to open modal, or refresh table data.
-        </p>
-
-        {{ render_table(table) }}
+    <div class="card">
+        <div class="card-body pb-0">
+            <h4 class="card-title">Editable / Exportable example</h4>
+            <p class="text-muted font-14">
+                There is no limitation about how you edit your data in datatable.<br>
+                You just have to add <code>WidgetColumnType</code> on your <code>DataTableType</code> and define link depending on data in row (You can create your own column too or customize the render of your columns).<br>
+                If you want edit data with modal, you can use <code>JsResponse</code> to open modal, or refresh table data.
+            </p>
+        </div>
+        <div class="card-datatable">
+            {{ render_table(table) }}
+        </div>
     </div>
 {% endblock %}
