--- a/templates/admin/datatable/custom_adapter.html.twig
+++ b/templates/admin/datatable/custom_adapter.html.twig
@@ -1,13 +1,16 @@
 {% extends "@UmbrellaAdmin/layout.html.twig" %}
 
 {% block content %}
-    <div class="card card-body">
-        <h4 class="card-title">Custom adapter</h4>
-        <p class="text-muted font-14">
-            Async loading. Data are paginate by server using a <code>CustomAdapter</code>.<br>
-            Adapter loading data from <a href="https://github.com/r-spacex/SpaceX-API" class="text-primary">SpaceX API</a> and use paginate options of Api.
-        </p>
-
-        {{ render_table(table) }}
+    <div class="card">
+        <div class="card-body pb-0">
+            <h4 class="card-title">Custom adapter</h4>
+            <p class="text-muted font-14">
+                Async loading. Data are paginate by server using a <code>CustomAdapter</code>.<br>
+                Adapter loading data from <a href="https://github.com/r-spacex/SpaceX-API" class="text-primary">SpaceX API</a> and use paginate options of Api.
+            </p>
+        </div>
+        <div class="card-datatable pt-0">
+            {{ render_table(table) }}
+        </div>
     </div>
 {% endblock %}
