Update Js Response doc (not finished)

--- a/templates/admin/menu/index.html.twig
+++ b/templates/admin/menu/index.html.twig
@@ -41,7 +41,7 @@
 
                     <div class="mb-4">
                         <h4>3 - Render breadcrumb on twig</h4>
-                        <div class="accordion" id="bc-methods">
+                        <div class="accordion accordion-flush" id="bc-methods">
                             <div class="accordion-item">
                                 <h2 class="accordion-header">
                                     <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#bc-method-a" aria-expanded="false">
