--- a/templates/admin/js/index.html.twig
+++ b/templates/admin/js/index.html.twig
@@ -3,143 +3,62 @@
 {% block content %}
     <div class="card">
         <div class="card-header">
-            <h4 class="card-title">Principle</h4>
+            <h4 class="card-title">How it works</h4>
         </div>
         <div class="card-body">
-            <p>
+            <div class="mb-4">
                 Client ( your web browser ) send an <b>Ajax</b> request to server.<br>
-                Then, server return an Json response respecting the good format.
-            </p>
+                Then, server return a Json response respecting the good format.<br>
+                <a href="#response-format" data-bs-toggle="collapse" class="text-primary">
+                    <i class="mdi mdi-code-json me-1"></i> Response format
+                </a>
+                <hl-code class="language-json collapse" id="response-format">{{ source('admin/js/_js_response.txt') | e('html') }}</hl-code>
+            </div>
 
-            <a href="#response-format" data-bs-toggle="collapse" class="text-primary">
-                <i class="mdi mdi-eye me-1"></i> See response format
-            </a>
-            <hl-code class="language-json collapse" id="response-format">{{ source('admin/js/_js_response.txt') | e('html') }}</hl-code>
-            <br>
-            <p>
+            <div class="mb-4">
                 So, Client resolves each actions one by one, calling the right js function depending of action type :
-            </p>
-            <ul>
-                <li>action : toast &rightarrow; <code>Toastify({text: 'Lorem ipsum'}).showToast()</code></li>
-                <li>action : redirect &rightarrow; <code>window.location.href=...</code></li>
-            </ul>
+                <ul>
+                    <li>action : toast &rightarrow; <code>Toastify({text: 'Lorem ipsum'}).showToast()</code></li>
+                    <li>action : redirect &rightarrow; <code>window.location.href=...</code></li>
+                </ul>
+            </div>
 
-            <p class="alert alert-primary">
-                Easiest way to return response in good format is to use the service <b>JsResponseBuilder</b> on Symfony controller.
+            <div class="mb-4">
+                <i class="mdi mdi-arrow-right"></i> To send ajax request, you must call <code>AjaxUtils.request()</code> on Javascript.<br>
+                <a href="#ajax-utils" data-bs-toggle="collapse" class="text-primary">
+                    <i class="mdi mdi-code-tags me-1"></i> Code Javascript
+                </a>
+                <hl-code class="language-js collapse" id="ajax-utils">{{ source('admin/js/_ajax_utils.txt') | e('html') }}</hl-code>
+            </div>
+
+            <div class="mb-4">
+                <i class="mdi mdi-arrow-right"></i> Then, your controller must return a JsonResponse.<br>
+                <a href="#controller" data-bs-toggle="collapse" class="text-primary">
+                    <i class="mdi mdi-code-tags me-1"></i> Code Symfony Controller
+                </a>
+                <hl-code class="language-js collapse" id="controller">{{ source('admin/js/_controller.txt') | e('html') }}</hl-code>
+            </div>
+
+            <h5>The <code>data-xhr</code> attribute</h5>
+            <p>
+                This attribute will override the default behaviour of <b>link</b> or <b>form</b> and send an <b>Ajax</b> request (with <code>AJaxUtils</code>) to server on
+                <b>click</b> or on <b>submit</b>.<br>
+                <a href="#data-xhr-attribute" data-bs-toggle="collapse" class="text-primary">
+                    <i class="mdi mdi-code-tags me-1"></i> Code HTML
+                </a>
+                <hl-code class="language-html collapse" id="data-xhr-attribute">{{ source('admin/js/_data_xhr_attribute.txt') | e('html') }}</hl-code>
             </p>
 
         </div>
     </div>
-
-    <div class="row">
-        <div class="col-md-6">
-            <div class="card">
-                <div class="card-header">
-                    <h4 class="card-title"><span class="text-primary">data-xhr</span> attribute</h4>
-                </div>
-                <div class="card-body">
-                    <p>
-                        This attribute will override the default behaviour of <b>link</b> or <b>form</b> and send an <b>Ajax</b> request to server on
-                        <b>click</b> or on <b>submit</b>.<br>
-                    </p>
-
-                    <h5>On view : </h5>
-                    <hl-code class="language-twig">{{ source('admin/js/_async_link.txt') | e('html') }}</hl-code>
-
-                    <h5>On controller : </h5>
-                    <hl-code class="language-php">{{ source('admin/js/_async_controller.txt') | e('html') }}</hl-code>
-                    <div>
-                        {% for action, label in actions %}
-                            <a href data-xhr="{{ path('app_admin_js_xhr', {'action' : action}) }}" class="btn btn-primary me-2 mb-2">
-                                {{ label }}
-                            </a>
-                        {% endfor %}
-                    </div>
-
-                    <div id="update-me"></div>
-                </div>
-            </div>
-        </div>
-
-        <div class="col-md-6">
-            <div class="card">
-                <div class="card-header">
-                    <h4 class="card-title"><span class="text-primary">data-spinner</span> attribute</h4>
-                </div>
-                <div class="card-body">
-                    <p>
-                        Display a spinner until the server responds.
-                    </p>
-                    <hl-code class="language-xml">{{ '<a data-xhr="..." data-spinner="true" href>My link</a>' | e }}</hl-code>
-
-                    <div>
-                        <a href data-xhr="{{ path('app_admin_js_sleepxhr') }}" data-spinner="true" class="btn btn-primary me-2 mb-2">
-                            Click-me
-                        </a>
-                    </div>
-                </div>
-            </div>
-        </div>
-
-        <div class="col-md-6">
-            <div class="card">
-                <div class="card-header">
-                    <h4 class="card-title"><span class="text-primary">data-confirm</span> attribute</h4>
-                </div>
-                <div class="card-body">
-                    <p>
-                        Display a confirm modal before call server.
-                    </p>
-                    <hl-code class="language-xml">{{ '<a data-xhr="..." data-confirm="Are you sure ?" href>My link</a>' | e }}</hl-code>
-
-                    <div>
-                        <a href data-xhr="{{ path('app_admin_js_sleepxhr', {sleep: 0}) }}" data-confirm="Are you sure ?" class="btn btn-primary me-2 mb-2">
-                            Click-me
-                        </a>
-                    </div>
-                </div>
-            </div>
-        </div>
-
-        <div class="col-md-6">
-            <div class="card">
-                <div class="card-header d-flex align-items-center">
-                    <h4 class="card-title"><span class="text-primary">data-xhr-id</span> attribute</h4>
-                    <span class="badge bg-danger ms-auto">New</span>
-                </div>
-                <div class="card-body">
-                    <p>
-                        One ajax call can be performed at the same time if they have the same <b>xhr-id</b>.
-                    </p>
-                    <hl-code class="language-xml">{{ '<a data-xhr="..." data-xhr-id="my-id" href>My link</a>' | e }}</hl-code>
-
-                    <div>
-                        <a href data-xhr="{{ path('app_admin_js_sleepxhr', {sleep: 2}) }}" data-xhr-id="my-id" class="btn btn-primary me-2 mb-2">
-                            Click-me
-                        </a>
-                        <a href data-xhr="{{ path('app_admin_js_sleepxhr', {sleep: 2}) }}" data-xhr-id="my-id" class="btn btn-primary me-2 mb-2">
-                            Or me
-                        </a>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-
     <div class="card">
         <div class="card-header">
-            <h4 class="card-title">JavaScript API</h4>
+            <h4 class="card-title">Example</h4>
         </div>
         <div class="card-body">
-            <p>
-                Instead of use data- attribute, you can use Javascript methods.
-            </p>
-
-            <hl-code class="language-js">{{ source('admin/js/_ajax_utils.txt') | e('html') }}</hl-code>
-
+            {% include "admin/js/_examples.html.twig" %}
         </div>
     </div>
-
     <div class="card">
         <div class="card-header">
             <h4 class="card-title">To go further...</h4>
@@ -167,5 +86,4 @@
 
         </div>
     </div>
-
 {% endblock %}
