--- a/templates/admin/js/index.html.twig
+++ b/templates/admin/js/index.html.twig
@@ -59,31 +59,22 @@
             {% include "admin/js/_examples.html.twig" %}
         </div>
     </div>
+
     <div class="card">
         <div class="card-header">
-            <h4 class="card-title">To go further...</h4>
+            <h4 class="card-title">Options</h4>
         </div>
         <div class="card-body">
-            <h5>Error handling</h5>
-
-            <p>
-                If server return a response with an error HTTP status code, a toast will be displayed
-                A specific message will be displayed if HTTP status code is <b>404 not found</b> or <b>401 Unauthorized</b>.
-            </p>
-
-
-            <h5>Handle action on JavaScript - jsResponseHandler</h5>
-            <p>
-                Each type of action is handled by a function.
-                The following code handle action of type 'toast' :
-            </p>
-
-            <hl-code class="language-js">{{ source('admin/js/_toast.txt') | e('html') }}</hl-code>
-
-            <p>
-                So, it's easy to override default action or add new action.
-            </p>
-
+            {% include "admin/js/_options.html.twig" %}
         </div>
     </div>
+{% endblock %}
+
+{% block javascripts %}
+    {{ parent() }}
+    <script>
+        umbrella.jsResponseHandler.registerAction('alert', (params) => {
+            alert(params.text)
+        });
+    </script>
 {% endblock %}
