--- a/templates/admin/datatable/basic.html.twig
+++ b/templates/admin/datatable/basic.html.twig
@@ -5,8 +5,8 @@
         <div class="card-body pb-0">
             <h4 class="card-title">Basic example</h4>
             <p class="text-muted font-14">
-                Async loading. Data are paginate, filtered and ordered by server using <code>EntityAdapter</code>.<br>
-                Table is built / configured using <code>DataTableType</code> that define columns using <code>ColumnType</code> and toolbar using Symfony <code>FormType</code> and <code>WidgetType</code>.<br>
+                Example of DataTable build with a <code>DataTableType</code>, columns are build with <code>ColumnType</code>, actions with <code>WidgetType</code> and filters with <code>Symfony FormType</code>.<br>
+                Server compute, filter and paginate data fetched from doctrine with <code>EntityAdapter</code> class.
             </p>
         </div>
         <div class="card-datatable">
