--- a/templates/admin/datatable/custom_adapter.html.twig
+++ b/templates/admin/datatable/custom_adapter.html.twig
@@ -5,8 +5,8 @@
         <div class="card-body pb-0">
             <h4 class="card-title">Custom adapter</h4>
             <p class="text-muted font-14">
-                Async loading. Data are paginate by server using a <code>CustomAdapter</code>.<br>
-                Adapter loading data from <a href="https://github.com/r-spacex/SpaceX-API" class="text-primary">SpaceX API</a> and use paginate options of Api.
+                Example of DataTable with data read from an Api.<br>
+                Server compute, filter and paginate data fetched from <a href="https://github.com/r-spacex/SpaceX-API" class="text-primary">SpaceX API</a> with a custom adapter.
             </p>
         </div>
         <div class="card-datatable pt-0">
