--- a/templates/admin/datatable/editable.html.twig
+++ b/templates/admin/datatable/editable.html.twig
@@ -3,7 +3,7 @@
 {% block content %}
     <div class="card">
         <div class="card-body pb-0">
-            <h4 class="card-title">Editable / Exportable example</h4>
+            <h4 class="card-title">Editable example</h4>
             <p class="text-muted font-14">
                 There is no limitation about how you edit your data in datatable.<br>
                 You just have to add <code>WidgetColumnType</code> on your <code>DataTableType</code> and define link depending on data in row (You can create your own column too or customize the render of your columns).<br>
