--- a/templates/admin/datatable/selectable.html.twig
+++ b/templates/admin/datatable/selectable.html.twig
@@ -3,10 +3,9 @@
 {% block content %}
     <div class="card">
         <div class="card-body pb-0">
-            <h4 class="card-title">Draggable example</h4>
+            <h4 class="card-title">Selectable example</h4>
             <p class="text-muted font-14">
-                Example of Datatable with <a href="https://datatables.net/extensions/rowreorder/" class="text-primary">RowReorder</a> plugin.<br>
-                After each row reordering, an ajax query was performed and server save changes.
+                Example of Datatable with custom select plugin.<br>
             </p>
         </div>
         <div class="card-datatable">
