--- a/templates/admin/datatable/basic.html.twig
+++ b/templates/admin/datatable/basic.html.twig
@@ -5,7 +5,7 @@
         <div class="card-body pb-0">
             <h4 class="card-title">Basic example</h4>
             <p class="text-muted font-14">
-                Example of DataTable build with a <code>DataTableType</code>, columns are build with <code>ColumnType</code>, actions with <code>WidgetType</code> and filters with <code>Symfony FormType</code>.<br>
+                Example of DataTable build with a <code>DataTableType</code>, columns are build with <code>ColumnType</code>, actions with <code>ActionType</code> and filters with <code>Symfony FormType</code>.<br>
                 Server compute, filter and paginate data fetched from doctrine with <code>EntityAdapter</code> class.
             </p>
         </div>
