--- a/templates/admin/datatable/tree.html.twig
+++ b/templates/admin/datatable/tree.html.twig
@@ -7,7 +7,7 @@
             <p class="text-muted font-14">
                 This is a DataTable !<br>
                 To obtain this result, use <code>tree = true</code> option to active <code>jquery-treetable</code> plugin on first column.<br>
-                In this example, i use <code>NestedEntityAdapter</code> working with Gedmo/Tree Entity (Entity must implements <code>NestedTreeEntityInterface</code>).
+                In this example, i use <code>NestedEntityAdapterType</code> working with Gedmo/Tree Entity (Entity must implements <code>NestedTreeEntityInterface</code>).
                 Whole data are loaded with one query but there is limitations : no pagination, no sort.
             </p>
         </div>
