--- a/templates/admin/datatable/basic.html.twig
+++ b/templates/admin/datatable/basic.html.twig
@@ -6,7 +6,7 @@
             <h4 class="card-title">Basic example</h4>
             <p class="text-muted font-14">
                 Example of DataTable build with a <code>DataTableType</code>, columns are build with <code>ColumnType</code>, actions with <code>ActionType</code> and filters with <code>Symfony FormType</code>.<br>
-                Server compute, filter and paginate data fetched from doctrine with <code>EntityAdapter</code> class.
+                Server compute, filter and paginate data fetched from doctrine with <code>EntityAdapterType</code> class.
             </p>
         </div>
         <div class="card-datatable">
