Improve multiple datatable example

--- a/templates/admin/datatable/multiple.html.twig
+++ b/templates/admin/datatable/multiple.html.twig
@@ -1,17 +1,26 @@
 {% extends "@UmbrellaAdmin/layout.html.twig" %}
 
 {% block content %}
-    <div class="alert alert-primary">
-        Try edit space mission ( <i class="mdi mdi-pencil"></i> icon ) and change his <b>mission status</b>.
-    </div>
-    {% for mission_status, table in tables %}
-        <div class="card">
-            <a href="#card-{{ table.id }}" class="card-link card-header" data-bs-toggle="collapse">
-                <h4 class="card-title"><i class="mdi mdi-chevron-right"></i> Space missions filtered by <span class="text-primary">{{ mission_status }}</span></h4>
-            </a>
-            <div id="card-{{ table.id }}" class="card-datatable collapse">
-                {{ render_table(table) }}
-            </div>
+    <p>
+        Try edit space mission ( <i class="mdi mdi-pencil"></i> icon ) and change his <b>rocket status</b>.
+        If you update rocket status of a mission, both table will be automatically updated.
+    </p>
+
+    <div class="card">
+        <div class="card-header">
+            <h4 class="card-title">Rocket status : <u>Active</u></h4>
         </div>
-    {% endfor %}
+        <div class="card-datatable">
+            {{ render_table(tableA) }}
+        </div>
+    </div>
+
+    <div class="card">
+        <div class="card-header">
+            <h4 class="card-title">Rocket status : <u>Retired</u></h4>
+        </div>
+        <div class="card-datatable">
+            {{ render_table(tableB) }}
+        </div>
+    </div>
 {% endblock %}
