--- a/templates/admin/datatable/_datatable_modal.html.twig
+++ b/templates/admin/datatable/_datatable_modal.html.twig
@@ -3,7 +3,7 @@
 {% block modal_class %}modal-xl{% endblock %}
 
 {% block modal_title %}
-    <h4 class="modal-title">DataTable on modal</h4>
+    <h4 class="modal-title">Missions</h4>
 {% endblock %}
 
 {% block modal_body %}
